added user cruds and register user
