# api/v1/handler.go
@@ -1,19 +1,32 @@
 package v1
 
 import (
+	"errors"
+	"strconv"
+
 	"github.com/TemurMannonov/medium_api_gateway/api/models"
 	"github.com/TemurMannonov/medium_api_gateway/config"
 	grpcPkg "github.com/TemurMannonov/medium_api_gateway/pkg/grpc_client"
+	"github.com/gin-gonic/gin"
+)
+
+var (
+	ErrWrongEmailOrPass = errors.New("wrong email or password")
+	ErrEmailExists      = errors.New("email already exists")
+	ErrUserNotVerified  = errors.New("user not verified")
+	ErrIncorrectCode    = errors.New("incorrect verification code")
+	ErrCodeExpired      = errors.New("verification code has been expired")
+	ErrForbidden        = errors.New("forbidden")
 )
 
 type handlerV1 struct {
 	cfg        *config.Config
-	grpcClient *grpcPkg.GrpcClient
+	grpcClient grpcPkg.GrpcClientI
 }
 
 type HandlerV1Options struct {
 	Cfg        *config.Config
-	GrpcClient *grpcPkg.GrpcClient
+	GrpcClient grpcPkg.GrpcClientI
 }
 
 func New(options *HandlerV1Options) *handlerV1 {
@@ -27,4 +40,32 @@ func errorResponse(err error) *models.ErrorResponse {
 	return &models.ErrorResponse{
 		Error: err.Error(),
 	}
+}
+
+func validateGetAllParams(c *gin.Context) (*models.GetAllParams, error) {
+	var (
+		limit int = 10
+		page  int = 1
+		err   error
+	)
+
+	if c.Query("limit") != "" {
+		limit, err = strconv.Atoi(c.Query("limit"))
+		if err != nil {
+			return nil, err
+		}
+	}
+
+	if c.Query("page") != "" {
+		page, err = strconv.Atoi(c.Query("page"))
+		if err != nil {
+			return nil, err
+		}
+	}
+
+	return &models.GetAllParams{
+		Limit:  int32(limit),
+		Page:   int32(page),
+		Search: c.Query("search"),
+	}, nil
 }
